# redcomponent-db-offloading

./: CMakeLists.txt  README.md  buildsystem.xml
include/redcomponent/offloading/: IOffloadManager.hpp  MockOffloadManager.hpp
sessions/: 20260114-01-52-001282-redcomponent-db-offloading-buildsystem-xml.md  20260114-18-50-001324-redcomponent-db-offloading-session-placeholder.md  20260116-10-41-001559-redcomponent-db-offloading-rehome-to-modules.md  20260116-15-34-001605-redcomponent-db-offloading-repository-metadata.md  20260116-17-13-001636-redcomponent-db-offloading-repository-metadata.md  20260116-21-35-001681-redcomponent-db-offloading-tests-cmake-wiring.md  20260117-11-52-002025-redcomponent-db-offloading-tests-wiring-sync.md
tests/: CMakeLists.txt  test_offloading.cpp
